--- a/10-agentic-AI/05-google-adk-poc/pom.xml
+++ b/10-agentic-AI/05-google-adk-poc/pom.xml
@@ -27,11 +27,46 @@
       <version>0.2.0</version>
     </dependency>
     
-    <!-- Google GenAI dependencies -->
+    <!-- HTTP Client for Gemini API calls -->
     <dependency>
-      <groupId>com.google.genai</groupId>
-      <artifactId>google-genai</artifactId>
-      <version>1.0.0</version>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>4.12.0</version>
+    </dependency>
+    
+    <!-- JSON processing -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.16.1</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.16.1</version>
+    </dependency>
+    
+    <!-- Lombok for annotations like @Log -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>provided</scope>
+    </dependency>
+    
+    <!-- SLF4J API -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.9</version>
+    </dependency>
+    
+    <!-- Logback Classic (SLF4J implementation) -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.4.14</version>
     </dependency>
     
     <!-- JUnit for testing -->
@@ -55,6 +90,13 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.15.2</version>
+    </dependency>
+    
+    <!-- EvalEx for mathematical expression evaluation -->
+    <dependency>
+      <groupId>com.udojava</groupId>
+      <artifactId>EvalEx</artifactId>
+      <version>2.7</version>
     </dependency>
   </dependencies>
 
